--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/3sum/bin/Debug/netcoreapp2.0/3sum.dll",
+            "program": "${workspaceFolder}/sum-of-distances-in-tree/bin/Debug/netcoreapp2.2/sum-of-distances-in-tree.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/3sum",
+            "cwd": "${workspaceFolder}/sum-of-distances-in-tree",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
